<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_interfaz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.mascota.AgregarVacunasActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnHomeContainer"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        app:cardBackgroundColor="@color/rectanguloLogo"
        app:cardCornerRadius="27.5dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/colorIntermedio"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/home_morado"
            android:contentDescription="Volver al inicio"
            android:padding="12dp"
            android:scaleType="centerInside" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTituloVacuna"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/rectanguloLogo"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:strokeColor="@color/colorIntermedio"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toTopOf="@id/btnHomeContainer"
        app:layout_constraintBottom_toBottomOf="@id/btnHomeContainer"
        app:layout_constraintStart_toEndOf="@id/btnHomeContainer"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Registro de Vacunas"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/btnHomeContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@drawable/rectangulosesion">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Información del Registro"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginBottom="15dp"
                        android:textSize="15sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutMascota"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        android:focusable="false"
                        app:endIconTint="@color/moradoSubtitulo"
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/spinnerMascota"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Selecciona la mascota"
                            android:textColorHint="@color/hintText"
                            android:contentDescription="Selector de mascotas"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:cursorVisible="false"
                            android:textColor="@android:color/black"
                            app:materialThemeOverlay="@style/ThemeOverlay.App.ExposedDropdownMenu"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Nombre de la vacuna"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black"
                            android:inputType="textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutMarca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtMarca"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Marca"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black"
                            android:inputType="textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="top">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutDosis"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:hintEnabled="false"
                            app:errorEnabled="true"
                            app:errorIconDrawable="@null">
                            <EditText
                                android:id="@+id/txtDosis"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="Cantidad"
                                android:textColorHint="@color/hintText"
                                android:background="@drawable/campos_circulares"
                                android:paddingHorizontal="15dp"
                                android:textColor="@android:color/black"
                                android:inputType="numberDecimal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="10dp"
                            android:layout_height="55dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutUnidad"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:endIconTint="@color/moradoSubtitulo">
                            <AutoCompleteTextView
                                android:id="@+id/autoCompleteUnidad"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:background="@drawable/campos_circulares"
                                android:inputType="none"
                                android:paddingHorizontal="10dp"
                                android:hint="ml"
                                android:textColorHint="@color/hintText"
                                android:textColor="@android:color/black"
                                app:materialThemeOverlay="@style/ThemeOverlay.App.ExposedDropdownMenu"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtFecha"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Fecha de aplicación"
                            android:textColorHint="@color/hintText"
                            android:focusable="false"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutProxFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtProxFecha"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Próxima fecha"
                            android:textColorHint="@color/hintText"
                            android:focusable="false"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingHorizontal="25dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnGuardarCambiosContainer"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:id="@+id/btnGuardarCambios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="12dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/aceptar_morado"
                            android:layout_marginEnd="8dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Guardar"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>